--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Canela';
+  src: url('../../public/fonts/CanelaText-Regular-Trial.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Avenir';
+  src: url('../../public/fonts/Avenir.ttc');
+}
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
