feat(web): drink menu

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -7,6 +7,19 @@
   font-family: 'Avenir';
   src: url('../../public/fonts/Avenir.ttc');
 }
+@font-face {
+  font-family: 'ZenkakuGothicNew';
+  src: url('../../public/fonts/ZenKakuGothicNew-Regular.ttf');
+}
+@font-face {
+  font-family: 'Cinzel';
+  src: url('../../public/fonts/Cinzel-Regular.ttf');
+}
+@font-face {
+  font-family: 'Forum';
+  src: url('../../public/fonts/Forum-Regular.ttf');
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
