--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -20,6 +20,10 @@
   src: url('../../public/fonts/Forum-Regular.ttf');
 }
 
+.image {
+  margin-bottom: -20px;
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
